# SuperMarioGame

./: .gitignore  CMakeLists.txt  super_mario_project_spec.md
docs/: player-interactions.md  player-mechanics-integration.md
include/Commands/: Command.h  FireCommand.h  JumpCommand.h  MoveCommand.h
include/Core/: AssetManager.h  Game.h  SaveSystem.h  SoundManager.h
include/Entities/: Character.h  Entity.h  Luigi.h  Mario.h
include/Entities/Enemies/: Enemy.h  Goomba.h  Koopa.h  PiranhaPlant.h
include/Entities/Items/: Coin.h  FireFlower.h  Item.h  Mushroom.h
include/Factories/: EntityFactory.h
include/Input/: InputHandler.h
include/Level/: Camera.h  Level.h  Tile.h  TileMap.h
include/Observer/: Event.h  Observer.h  Subject.h
include/Physics/: CollisionManager.h
include/PlayerEffects/: DamageInvincibilityEffect.h  PlayerEffect.h  ShieldEffect.h  StarEffect.h
include/PlayerStates/: FireState.h  PlayerState.h  SmallState.h  SuperState.h
include/States/: GameOverState.h  GameState.h  GameStateManager.h  MenuState.h  PauseState.h  PlayState.h
include/UI/: HUD.h
src/: main.cpp
src/Commands/: FireCommand.cpp  JumpCommand.cpp  MoveCommand.cpp
src/Core/: AssetManager.cpp  Game.cpp  SaveSystem.cpp  SoundManager.cpp
src/Entities/: Character.cpp  Entity.cpp  Luigi.cpp  Mario.cpp
src/Entities/Enemies/: Enemy.cpp  Goomba.cpp  Koopa.cpp  PiranhaPlant.cpp
src/Entities/Items/: Coin.cpp  FireFlower.cpp  Item.cpp  Mushroom.cpp
src/Factories/: EntityFactory.cpp
src/Input/: InputHandler.cpp
src/Level/: Camera.cpp  Level.cpp  Tile.cpp  TileMap.cpp
src/Observer/: Subject.cpp
src/Physics/: CollisionManager.cpp
src/PlayerEffects/: DamageInvincibilityEffect.cpp  PlayerEffect.cpp  ShieldEffect.cpp  StarEffect.cpp
src/PlayerStates/: FireState.cpp  PlayerState.cpp  SmallState.cpp  SuperState.cpp
src/States/: GameOverState.cpp  GameStateManager.cpp  MenuState.cpp  PauseState.cpp  PlayState.cpp
src/UI/: HUD.cpp
